Add one article

--- a/zh/pages/writing/20190116【区块链】使用MDWiki需要自动化的一些工作（五十六）.md
+++ b/zh/pages/writing/20190116【区块链】使用MDWiki需要自动化的一些工作（五十六）.md
@@ -1,2 +1,89 @@
-#使用MDWiki需要自动化的一些工作（五十六）
+#【区块链】使用MDWiki需要自动化的一些工作（五十六）
 
+今天把MDWiki做了一些修改，主要是过去写的那些文章的索引，以下步骤参考了[MDWiki的README](https://github.com/hooman118/hoo-wiki/blob/gh-pages/README.md)
+
+MDWiki的目录结构
+---------
+
+_这里所有的文件都是指对应语言目录下的文件（比如我的`zh`目录）_
+
+| 文件名          | 类型   | 说明                                                         |
+| :-------------- | :----- | :----------------------------------------------------------- |
+| `index.md`      | File   | 主要的索引文件，可以说是整个Wiki的首页。 **注意不是 `index.html`, 是 `index.md`**! |
+| `navigation.md` | File   | 一些其他设置（比如，名字啊，菜单啊等等）                     |
+| `config.json`   | File   | 程序用到的配置文件，基本不需要修改                           |
+| `pages`         | Folder | 最好把所有的文章（`xxx.md`）都放到这个目录下面，可以根据需要创建子目录 |
+| `uploads`       | Folder | 这个目录通常可以用来放一些上传的文件， **当然最好是把这些文件放到别的地方，比如Dropbox，或者CDN等等，反正不建议放GitHub** |
+
+##拷贝过往文章内容
+
+我将过去写的文章（一个名为`writing`的目录）整个挪到了pages目录下，包括一些文章中用到的小小图片。因为图片不多，我就没管人家说不建议放GitHub的提议。
+
+##修改配置及索引文件
+
+然后，依次修改`config.json`，`navigation.md`，`index.md`，并且为我的每一类文章增加了一个对应的索引文件（`随笔.md`，`生命⋅修行.md`，`区块链.md`，`创业.md`），中文文件名完全没问题，这让我很开心😄
+
+### `config.json`
+
+```json
+{
+  "additionalFooterText": "All content and images &copy; by Hooman&nbsp;<br>",
+  "anchorCharacter": "#",
+  "lineBreaks": "gfm",
+  "title": "Hoo‘s Wiki",
+  "useSideMenu": true
+}
+```
+
+这是一个Json格式的配置文件，第一行是显示在整个页面下方的版权信息，最后一行是要不要左侧的菜单。
+
+###`mavigation.md`
+
+```markdown
+<!--
+  -- Name of your wiki
+  -- Do NOT remove the leading `#` character.
+  -->
+
+# 浩然文集
+
+
+<!--
+  -- Default theme
+  -- (Read: http://dynalon.github.io/mdwiki/#!customizing.md#Theme_chooser)
+  -->
+
+[gimmick:theme](spacelab)
+
+
+<!--
+  -- Navigation
+  -- (Read: http://dynalon.github.io/mdwiki/#!quickstart.md#Adding_a_navigation)
+  -->
+
+[随笔](pages/随笔.md)
+[生命⋅修行](pages/生命⋅修行.md)
+[区块链](pages/区块链.md)
+[创业](pages/创业.md)
+[我的简书](https://www.jianshu.com/u/0f2c2131d6af)
+```
+
+文件里面的注释很清楚，照着注释的例子修改即可。我只修改了网站的名字、以及最上方的菜单，也就是我自己为每一类文章单独创建的索引。顺便还加了一个到简书的链接。
+
+###`index.md`
+
+这个文件就是网站的主页内容了，想写什么就写什么，只要按照Markdown语法即可。可以参考学习下GitHub的[Markdown指南](https://github.github.com/gfm/)，和MDWiki的[Quick Start指南](http://dynalon.github.io/mdwiki/#!quickstart.md)。对我来说，最重要的是怎样链接到我之前写的那些文章。其实很简单，就像下面这样，方括号`[]`内是显示的文字，圆括号`()`内是我文章的文件名（**注意这里需要用相对路径**）。
+
+```markdown
+[20181121【随笔】开始一次新的尝试（一）  ](pages/writing/20181121【随笔】开始一次新的尝试（一）  .md)
+```
+
+
+
+###其他索引文件
+
+和编辑index.md一样，想怎么编辑就怎么编辑。
+
+### 自动化的需求
+
+其实，我并不想费功夫编写这些索引文件。但是，目前这是必须的工作，每新增一篇文章，我至少需要在一个地方增加索引，才可能从MDWiki的首页或某个菜单访问。接下来可以写个脚本自动刷新索引，同样的，也可以用另外一个脚本或程序索引提交到IPFS。
