--- a/zh/pages/创业.md
+++ b/zh/pages/创业.md
@@ -1,15 +1,13 @@
-# About Page
+# 创业不易，且活且珍惜！
 
+## 2019
+### 1月
+[20190118【创业】陷入细节的困扰（五十八）](pages/writing/20190118【创业】陷入细节的困扰（五十八）.md)
+[20190117【创业】Facebook广告再探（五十七）](pages/writing/20190117【创业】Facebook广告再探（五十七）.md)
+[20190103【创业】用户注册了，然后呢？（四十四）](pages/writing/20190103【创业】用户注册了，然后呢？（四十四）.md)
 
-## Section 1
-
-Etiam porta sem malesuada magna mollis euismod. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
-Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
-Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui.
-
-
-## Section 2
-
-Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+## 2018
+### 12月
+[20181228【创业】Facebook的广告初探（三十八）](pages/writing/20181228【创业】Facebook的广告初探（三十八）.md)
+[20181206【创业】一个能哗哗卖的产品服务系统（十六）](pages/writing/20181206【创业】一个能哗哗卖的产品服务系统（十六）.md)
+[20181205【创业】不熟不做、做必入坑（十五）  ](pages/writing/20181205【创业】不熟不做、做必入坑（十五）  .md)
