--- a/zh/pages/随笔.md
+++ b/zh/pages/随笔.md
@@ -1,15 +1,31 @@
-# About Page
+# 随手记录，生命中的点点滴滴！
 
 
-## Section 1
+## 2019
+### 1月
+[20190120【随笔】阳光下的咖啡时光（六十）](pages/writing/20190120【随笔】阳光下的咖啡时光（六十）.md)
+[20190119【随笔】快乐的星期六（五十九）](pages/writing/20190119【随笔】快乐的星期六（五十九）.md)
+[20190113【随笔】无法偷闲的下午（五十三）](pages/writing/20190113【随笔】无法偷闲的下午（五十三）.md)
+[20190112【随笔】眼前飞舞的黑影（五十二）](pages/writing/20190112【随笔】眼前飞舞的黑影（五十二）.md)
+[20190109【随笔】严重退化的IT技能（四十九）](pages/writing/20190109【随笔】严重退化的IT技能（四十九）.md)
+[20190101【随笔】小宝宝的神奇判断（四十二）](pages/writing/20190101【随笔】小宝宝的神奇判断（四十二）.md)
 
-Etiam porta sem malesuada magna mollis euismod. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+## 2018
+### 12月
+[20181231【随笔】美好的跨年聚餐（四十一）](pages/writing/20181231【随笔】美好的跨年聚餐（四十一）.md)
+[20181230【随笔】超值的理发体验（四十）](pages/writing/20181230【随笔】超值的理发体验（四十）.md)
+[20181226【随笔】花开的声音（三十六）](pages/writing/20181226【随笔】花开的声音（三十六）.md)
+[20181222【随笔】多了一个儿子（三十二）](pages/writing/20181222【随笔】多了一个儿子（三十二）.md)
+[20181217【随笔】没什么阴云可以永远遮住阳光（二十七）](pages/writing/20181217【随笔】没什么阴云可以永远遮住阳光（二十七）.md)
+[20181216【随笔】当效法东坡日取150钱度日（二十六）](pages/writing/20181216【随笔】当效法东坡日取150钱度日（二十六）.md)
+[20181215【随笔】寒冷的冬天缺少一堆🔥（二十五）](pages/writing/20181215【随笔】寒冷的冬天缺少一堆🔥（二十五）.md)
+[20181207【随笔】睡不着是因为咖啡吗（十七）](pages/writing/20181207【随笔】睡不着是因为咖啡吗（十七）.md)
+[20181203【随笔】凌晨一点的深圳（十三）](pages/writing/20181203【随笔】凌晨一点的深圳（十三）.md)
+[20181202【随笔】朱砂扣（十二） ](pages/writing/20181202【随笔】朱砂扣（十二） .md)
 
-Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+### 11月
+[20181130【随笔】查理⋅卓别林的诗（十）  ](pages/writing/20181130【随笔】查理⋅卓别林的诗（十）  .md)
+[20181128【随笔】参天大树带来的生活气息（八）  ](pages/writing/20181128【随笔】参天大树带来的生活气息（八）  .md)
+[20181124【随笔】周末是个挑战（四）  ](pages/writing/20181124【随笔】周末是个挑战（四）  .md)
+[20181121【随笔】开始一次新的尝试（一）  ](pages/writing/20181121【随笔】开始一次新的尝试（一）  .md)
 
-Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui.
-
-
-## Section 2
-
-Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
