--- a/zh/pages/随笔.md
+++ b/zh/pages/随笔.md
@@ -3,31 +3,31 @@
 
 ## 2019
 ### 1月
-[20190124【随笔】带宝上班（六十四）](pages/writing/20190124【随笔】带宝上班（六十四）.md)
-[20190121【随笔】无法按时收工的焦虑（六十一）](pages/writing/20190121【随笔】无法按时收工的焦虑（六十一）.md)
-[20190120【随笔】阳光下的咖啡时光（六十）](pages/writing/20190120【随笔】阳光下的咖啡时光（六十）.md)
-[20190119【随笔】快乐的星期六（五十九）](pages/writing/20190119【随笔】快乐的星期六（五十九）.md)
-[20190113【随笔】无法偷闲的下午（五十三）](pages/writing/20190113【随笔】无法偷闲的下午（五十三）.md)
-[20190112【随笔】眼前飞舞的黑影（五十二）](pages/writing/20190112【随笔】眼前飞舞的黑影（五十二）.md)
-[20190109【随笔】严重退化的IT技能（四十九）](pages/writing/20190109【随笔】严重退化的IT技能（四十九）.md)
-[20190101【随笔】小宝宝的神奇判断（四十二）](pages/writing/20190101【随笔】小宝宝的神奇判断（四十二）.md)
+[20190124【随笔】带宝上班（六十四）](writing/20190124【随笔】带宝上班（六十四）.md)
+[20190121【随笔】无法按时收工的焦虑（六十一）](writing/20190121【随笔】无法按时收工的焦虑（六十一）.md)
+[20190120【随笔】阳光下的咖啡时光（六十）](writing/20190120【随笔】阳光下的咖啡时光（六十）.md)
+[20190119【随笔】快乐的星期六（五十九）](writing/20190119【随笔】快乐的星期六（五十九）.md)
+[20190113【随笔】无法偷闲的下午（五十三）](writing/20190113【随笔】无法偷闲的下午（五十三）.md)
+[20190112【随笔】眼前飞舞的黑影（五十二）](writing/20190112【随笔】眼前飞舞的黑影（五十二）.md)
+[20190109【随笔】严重退化的IT技能（四十九）](writing/20190109【随笔】严重退化的IT技能（四十九）.md)
+[20190101【随笔】小宝宝的神奇判断（四十二）](writing/20190101【随笔】小宝宝的神奇判断（四十二）.md)
 
 ## 2018
 ### 12月
-[20181231【随笔】美好的跨年聚餐（四十一）](pages/writing/20181231【随笔】美好的跨年聚餐（四十一）.md)
-[20181230【随笔】超值的理发体验（四十）](pages/writing/20181230【随笔】超值的理发体验（四十）.md)
-[20181226【随笔】花开的声音（三十六）](pages/writing/20181226【随笔】花开的声音（三十六）.md)
-[20181222【随笔】多了一个儿子（三十二）](pages/writing/20181222【随笔】多了一个儿子（三十二）.md)
-[20181217【随笔】没什么阴云可以永远遮住阳光（二十七）](pages/writing/20181217【随笔】没什么阴云可以永远遮住阳光（二十七）.md)
-[20181216【随笔】当效法东坡日取150钱度日（二十六）](pages/writing/20181216【随笔】当效法东坡日取150钱度日（二十六）.md)
-[20181215【随笔】寒冷的冬天缺少一堆🔥（二十五）](pages/writing/20181215【随笔】寒冷的冬天缺少一堆🔥（二十五）.md)
-[20181207【随笔】睡不着是因为咖啡吗（十七）](pages/writing/20181207【随笔】睡不着是因为咖啡吗（十七）.md)
-[20181203【随笔】凌晨一点的深圳（十三）](pages/writing/20181203【随笔】凌晨一点的深圳（十三）.md)
-[20181202【随笔】朱砂扣（十二） ](pages/writing/20181202【随笔】朱砂扣（十二） .md)
+[20181231【随笔】美好的跨年聚餐（四十一）](writing/20181231【随笔】美好的跨年聚餐（四十一）.md)
+[20181230【随笔】超值的理发体验（四十）](writing/20181230【随笔】超值的理发体验（四十）.md)
+[20181226【随笔】花开的声音（三十六）](writing/20181226【随笔】花开的声音（三十六）.md)
+[20181222【随笔】多了一个儿子（三十二）](writing/20181222【随笔】多了一个儿子（三十二）.md)
+[20181217【随笔】没什么阴云可以永远遮住阳光（二十七）](writing/20181217【随笔】没什么阴云可以永远遮住阳光（二十七）.md)
+[20181216【随笔】当效法东坡日取150钱度日（二十六）](writing/20181216【随笔】当效法东坡日取150钱度日（二十六）.md)
+[20181215【随笔】寒冷的冬天缺少一堆🔥（二十五）](writing/20181215【随笔】寒冷的冬天缺少一堆🔥（二十五）.md)
+[20181207【随笔】睡不着是因为咖啡吗（十七）](writing/20181207【随笔】睡不着是因为咖啡吗（十七）.md)
+[20181203【随笔】凌晨一点的深圳（十三）](writing/20181203【随笔】凌晨一点的深圳（十三）.md)
+[20181202【随笔】朱砂扣（十二） ](writing/20181202【随笔】朱砂扣（十二） .md)
 
 ### 11月
-[20181130【随笔】查理⋅卓别林的诗（十）  ](pages/writing/20181130【随笔】查理⋅卓别林的诗（十）  .md)
-[20181128【随笔】参天大树带来的生活气息（八）  ](pages/writing/20181128【随笔】参天大树带来的生活气息（八）  .md)
-[20181124【随笔】周末是个挑战（四）  ](pages/writing/20181124【随笔】周末是个挑战（四）  .md)
-[20181121【随笔】开始一次新的尝试（一）  ](pages/writing/20181121【随笔】开始一次新的尝试（一）  .md)
+[20181130【随笔】查理⋅卓别林的诗（十）  ](writing/20181130【随笔】查理⋅卓别林的诗（十）  .md)
+[20181128【随笔】参天大树带来的生活气息（八）  ](writing/20181128【随笔】参天大树带来的生活气息（八）  .md)
+[20181124【随笔】周末是个挑战（四）  ](writing/20181124【随笔】周末是个挑战（四）  .md)
+[20181121【随笔】开始一次新的尝试（一）  ](writing/20181121【随笔】开始一次新的尝试（一）  .md)
 
