--- a/zh/pages/创业.md
+++ b/zh/pages/创业.md
@@ -2,13 +2,13 @@
 
 ## 2019
 ### 1月
-[20190122【创业】Facebook广告之思考（六十二）](pages/writing/20190122【创业】Facebook广告之思考（六十二）.md)
-[20190118【创业】陷入细节的困扰（五十八）](pages/writing/20190118【创业】陷入细节的困扰（五十八）.md)
-[20190117【创业】Facebook广告再探（五十七）](pages/writing/20190117【创业】Facebook广告再探（五十七）.md)
-[20190103【创业】用户注册了，然后呢？（四十四）](pages/writing/20190103【创业】用户注册了，然后呢？（四十四）.md)
+[20190122【创业】Facebook广告之思考（六十二）](writing/20190122【创业】Facebook广告之思考（六十二）.md)
+[20190118【创业】陷入细节的困扰（五十八）](writing/20190118【创业】陷入细节的困扰（五十八）.md)
+[20190117【创业】Facebook广告再探（五十七）](writing/20190117【创业】Facebook广告再探（五十七）.md)
+[20190103【创业】用户注册了，然后呢？（四十四）](writing/20190103【创业】用户注册了，然后呢？（四十四）.md)
 
 ## 2018
 ### 12月
-[20181228【创业】Facebook的广告初探（三十八）](pages/writing/20181228【创业】Facebook的广告初探（三十八）.md)
-[20181206【创业】一个能哗哗卖的产品服务系统（十六）](pages/writing/20181206【创业】一个能哗哗卖的产品服务系统（十六）.md)
-[20181205【创业】不熟不做、做必入坑（十五）  ](pages/writing/20181205【创业】不熟不做、做必入坑（十五）  .md)
+[20181228【创业】Facebook的广告初探（三十八）](writing/20181228【创业】Facebook的广告初探（三十八）.md)
+[20181206【创业】一个能哗哗卖的产品服务系统（十六）](writing/20181206【创业】一个能哗哗卖的产品服务系统（十六）.md)
+[20181205【创业】不熟不做、做必入坑（十五）  ](writing/20181205【创业】不熟不做、做必入坑（十五）  .md)
