--- a/zh/pages/区块链.md
+++ b/zh/pages/区块链.md
@@ -3,16 +3,16 @@
 
 ## 2019
 ### 1月
-[20190116【区块链】使用MDWiki需要自动化的一些工作（五十六)](pages/writing/20190116【区块链】使用MDWiki需要自动化的一些工作（五十六）.md)
-[20190111【区块链】在GitHub上部署MDWiki（五十一）](pages/writing/20190111【区块链】在GitHub上部署MDWiki（五十一）.md)
-[20190108【区块链】在IPFS上发表文章（四十八）](pages/writing/20190108【区块链】在IPFS上发表文章（四十八）.md)
+[20190116【区块链】使用MDWiki需要自动化的一些工作（五十六)](writing/20190116【区块链】使用MDWiki需要自动化的一些工作（五十六）.md)
+[20190111【区块链】在GitHub上部署MDWiki（五十一）](writing/20190111【区块链】在GitHub上部署MDWiki（五十一）.md)
+[20190108【区块链】在IPFS上发表文章（四十八）](writing/20190108【区块链】在IPFS上发表文章（四十八）.md)
 
 ## 2018
 ### 12月
-[20181219【区块链】IPFS初探之安装试玩（二十九）](pages/writing/20181219【区块链】IPFS初探之安装试玩（二十九）.md)
-[20181218【区块链】IPFS初探（二十八）](pages/writing/20181218【区块链】IPFS初探（二十八）.md)
-[20181213【区块链】面向久远将来的信息架构（二十三）](pages/writing/20181213【区块链】面向久远将来的信息架构（二十三）.md)
+[20181219【区块链】IPFS初探之安装试玩（二十九）](writing/20181219【区块链】IPFS初探之安装试玩（二十九）.md)
+[20181218【区块链】IPFS初探（二十八）](writing/20181218【区块链】IPFS初探（二十八）.md)
+[20181213【区块链】面向久远将来的信息架构（二十三）](writing/20181213【区块链】面向久远将来的信息架构（二十三）.md)
 
 ### 11月
-[20181127【区块链】什么是货币（七）  ](pages/writing/20181127【区块链】什么是货币（七）  .md)
+[20181127【区块链】什么是货币（七）  ](writing/20181127【区块链】什么是货币（七）  .md)
 
