--- a/zh/pages/生命⋅修行.md
+++ b/zh/pages/生命⋅修行.md
@@ -3,38 +3,38 @@
 
 ## 2019
 ### 1月
-[20190123【生命⋅修行】不卑不亢（六十三）](pages/writing/20190123【生命⋅修行】不卑不亢（六十三）.md)
-[20190115【生命⋅修行】自大到崩溃的边缘（五十五）](pages/writing/20190115【生命⋅修行】自大到崩溃的边缘（五十五）.md)
-[20190114【生命⋅修行】被封印的生命力（五十四）](pages/writing/20190114【生命⋅修行】被封印的生命力（五十四）.md)
-[20190110【生命⋅修行】不必勉强而为（五十）](pages/writing/20190110【生命⋅修行】不必勉强而为（五十）.md)
-[20190106【生命⋅修行】管用的咒语（四十七）](pages/writing/20190106【生命⋅修行】管用的咒语（四十七）.md)
-[20190105【生命⋅修行】初心（四十六）](pages/writing/20190105【生命⋅修行】初心（四十六）.md)
-[20190104【生命⋅修行】情绪真是一个难以控制的东西（四十五）](pages/writing/20190104【生命⋅修行】情绪真是一个难以控制的东西（四十五）.md)
-[20190102【生命⋅修行】那些"应该"的压力（四十三）](pages/writing/20190102【生命⋅修行】那些"应该"的压力（四十三）.md)
-[20190102【生命⋅修行】那些"应该"的压力（四十三）](pages/writing/20190102【生命⋅修行】那些"应该"的压力（四十三）.md)
+[20190123【生命⋅修行】不卑不亢（六十三）](writing/20190123【生命⋅修行】不卑不亢（六十三）.md)
+[20190115【生命⋅修行】自大到崩溃的边缘（五十五）](writing/20190115【生命⋅修行】自大到崩溃的边缘（五十五）.md)
+[20190114【生命⋅修行】被封印的生命力（五十四）](writing/20190114【生命⋅修行】被封印的生命力（五十四）.md)
+[20190110【生命⋅修行】不必勉强而为（五十）](writing/20190110【生命⋅修行】不必勉强而为（五十）.md)
+[20190106【生命⋅修行】管用的咒语（四十七）](writing/20190106【生命⋅修行】管用的咒语（四十七）.md)
+[20190105【生命⋅修行】初心（四十六）](writing/20190105【生命⋅修行】初心（四十六）.md)
+[20190104【生命⋅修行】情绪真是一个难以控制的东西（四十五）](writing/20190104【生命⋅修行】情绪真是一个难以控制的东西（四十五）.md)
+[20190102【生命⋅修行】那些"应该"的压力（四十三）](writing/20190102【生命⋅修行】那些"应该"的压力（四十三）.md)
+[20190102【生命⋅修行】那些"应该"的压力（四十三）](writing/20190102【生命⋅修行】那些"应该"的压力（四十三）.md)
 
 ## 2018
 ### 12月
-[20181229【生命⋅修行】问题⋅注意力⋅现实（三十九）](pages/writing/20181229【生命⋅修行】问题⋅注意力⋅现实（三十九）.md)
-[20181227【生命⋅修行】天使与魔鬼的战争（三十七）](pages/writing/20181227【生命⋅修行】天使与魔鬼的战争（三十七）.md)
-[20181225【生命⋅修行】关注那些行之有效的事情（三十五）](pages/writing/20181225【生命⋅修行】关注那些行之有效的事情（三十五）.md)
-[20181224【生命⋅修行】清洁是一种修行（三十四）](pages/writing/20181224【生命⋅修行】清洁是一种修行（三十四）.md)
-[20181223【生命⋅修行】一阳来复（三十三）](pages/writing/20181223【生命⋅修行】一阳来复（三十三）.md)
-[20181221【生命⋅修行】只是觉察就够了吗（三十一）](pages/writing/20181221【生命⋅修行】只是觉察就够了吗（三十一）.md)
-[20181220【生命⋅修行】我唯一的要求就是：你要做你自己！](pages/writing/20181220【生命⋅修行】我唯一的要求就是：你要做你自己！.md)
-[20181214【生命⋅修行】愚者佩之（二十四）](pages/writing/20181214【生命⋅修行】愚者佩之（二十四）.md)
-[20181212【生命⋅修行】本自俱足（二十二）](pages/writing/20181212【生命⋅修行】本自俱足（二十二）.md)
-[20181211【生命⋅修行】从今往后（二十一）](pages/writing/20181211【生命⋅修行】从今往后（二十一）.md)
-[20181210【生命⋅修行】活着时每一瞬间都是你的（二十）](pages/writing/20181210【生命⋅修行】活着时每一瞬间都是你的（二十）.md)
-[20181209【生命⋅修行】难寻个稳当快乐处（十九）](pages/writing/20181209【生命⋅修行】难寻个稳当快乐处（十九）.md)
-[20181208【生命⋅修行】生命如果结束了会怎样（十八）](pages/writing/20181208【生命⋅修行】生命如果结束了会怎样（十八）.md)
-[20181204【生命⋅修行】无常才是平常（十四）  ](pages/writing/20181204【生命⋅修行】无常才是平常（十四）  .md)
-[20181201【生命⋅修行】72个借口（十一）  ](pages/writing/20181201【生命⋅修行】72个借口（十一）  .md)
+[20181229【生命⋅修行】问题⋅注意力⋅现实（三十九）](writing/20181229【生命⋅修行】问题⋅注意力⋅现实（三十九）.md)
+[20181227【生命⋅修行】天使与魔鬼的战争（三十七）](writing/20181227【生命⋅修行】天使与魔鬼的战争（三十七）.md)
+[20181225【生命⋅修行】关注那些行之有效的事情（三十五）](writing/20181225【生命⋅修行】关注那些行之有效的事情（三十五）.md)
+[20181224【生命⋅修行】清洁是一种修行（三十四）](writing/20181224【生命⋅修行】清洁是一种修行（三十四）.md)
+[20181223【生命⋅修行】一阳来复（三十三）](writing/20181223【生命⋅修行】一阳来复（三十三）.md)
+[20181221【生命⋅修行】只是觉察就够了吗（三十一）](writing/20181221【生命⋅修行】只是觉察就够了吗（三十一）.md)
+[20181220【生命⋅修行】我唯一的要求就是：你要做你自己！](writing/20181220【生命⋅修行】我唯一的要求就是：你要做你自己！.md)
+[20181214【生命⋅修行】愚者佩之（二十四）](writing/20181214【生命⋅修行】愚者佩之（二十四）.md)
+[20181212【生命⋅修行】本自俱足（二十二）](writing/20181212【生命⋅修行】本自俱足（二十二）.md)
+[20181211【生命⋅修行】从今往后（二十一）](writing/20181211【生命⋅修行】从今往后（二十一）.md)
+[20181210【生命⋅修行】活着时每一瞬间都是你的（二十）](writing/20181210【生命⋅修行】活着时每一瞬间都是你的（二十）.md)
+[20181209【生命⋅修行】难寻个稳当快乐处（十九）](writing/20181209【生命⋅修行】难寻个稳当快乐处（十九）.md)
+[20181208【生命⋅修行】生命如果结束了会怎样（十八）](writing/20181208【生命⋅修行】生命如果结束了会怎样（十八）.md)
+[20181204【生命⋅修行】无常才是平常（十四）  ](writing/20181204【生命⋅修行】无常才是平常（十四）  .md)
+[20181201【生命⋅修行】72个借口（十一）  ](writing/20181201【生命⋅修行】72个借口（十一）  .md)
 
 ### 11月
-[20181129【生命⋅修行】生命力是被“爱”卡住了吗？（九）    ](pages/writing/20181129【生命⋅修行】生命力是被“爱”卡住了吗？（九）    .md)
-[20181126【生命⋅修行】在看得见的地方好好用功（六）  ](pages/writing/20181126【生命⋅修行】在看得见的地方好好用功（六）  .md)
-[20181125【生命⋅修行】打破常轨的冲动（五）    ](pages/writing/20181125【生命⋅修行】打破常轨的冲动（五）    .md)
-[20181123【生命⋅修行】知止（三）  ](pages/writing/20181123【生命⋅修行】知止（三）  .md)
-[20181122【生命⋅修行】生命至此、修行好像已经画了一个圈（二）  ](pages/writing/20181122【生命⋅修行】生命至此、修行好像已经画了一个圈（二）  .md)
+[20181129【生命⋅修行】生命力是被“爱”卡住了吗？（九）    ](writing/20181129【生命⋅修行】生命力是被“爱”卡住了吗？（九）    .md)
+[20181126【生命⋅修行】在看得见的地方好好用功（六）  ](writing/20181126【生命⋅修行】在看得见的地方好好用功（六）  .md)
+[20181125【生命⋅修行】打破常轨的冲动（五）    ](writing/20181125【生命⋅修行】打破常轨的冲动（五）    .md)
+[20181123【生命⋅修行】知止（三）  ](writing/20181123【生命⋅修行】知止（三）  .md)
+[20181122【生命⋅修行】生命至此、修行好像已经画了一个圈（二）  ](writing/20181122【生命⋅修行】生命至此、修行好像已经画了一个圈（二）  .md)
 
