--- a/zh/pages/writing/20190122【创业】Facebook广告之思考（六十二）.md
+++ b/zh/pages/writing/20190122【创业】Facebook广告之思考（六十二）.md
@@ -8,7 +8,7 @@
 
 *由于退款是线下处理，Facebook无法跟踪，除开已经退款的一个阿富汗客户$109，总购买也有400多美金了。*
 
-设想一下，不继续做任何优化的情况下，只是线性增加广告投入100倍，花7000美金，把覆盖人群从40,000提高到4,000,000，就应该能带来4万美金的收入，1万多个新用户，其中会长期续费的用户应该在2,000到3,000左右。
+设想一下，不继续做任何优化的情况下，只是线性增加广告投入100倍，花7000美金，把覆盖人群从40,000提高到4,000,000，就应该能带来4万美金的收入，近2000个新用户，其中会长期续费的用户应该在200到300左右。如果再把这4万的收入全部投入到推广中去……
 
 而且，同时我们还看到另外一组广告的数据：
 
