--- a/zh/pages/writing/20190215【区块链】Filecoin如期开源（八十五）.md
+++ b/zh/pages/writing/20190215【区块链】Filecoin如期开源（八十五）.md
@@ -68,6 +68,10 @@
 
 **一如即往的，Filecoin担心矿工们无谓疯狂以及有人趁机兴风作浪骗用户**
 
+>## Important Note
+>
+>**This is not the Filecoin mainnet launch**. The project repos and devnets are mainly for developer and researcher testing. Miners **should not** invest in mining hardware based on any current specs or implementations, as they are certainly going to change. We will host a Q&A session for miners in late Q1 2019, and will update the community when a date/time have been set. Please sign up to the [Miner Testing Form](https://docs.google.com/forms/d/e/1FAIpQLSfdFpWhJj8OIGA2iXrT3bnLgVK9bgR_1iLMPdAcXLxr_1d-pw/viewform?c=0&w=1) to be notified when features are ready for testing by prospective Filecoin miners.
+>
 >## 重要通告！！！
 >
 >**这不是主网上线（换句话说：这是演习！！！）**。代码库和开发网主要用于开发与研究测试。矿工们**千万不要**根据当前的规格与实现大肆投资挖矿硬件，因为这些一定会变！我们会在2019年第一季度玩些时候开一个针对矿工的问答会，具体时间定下来后会在社区通知。请签署提交 [矿工测试申请表](https://docs.google.com/forms/d/e/1FAIpQLSfdFpWhJj8OIGA2iXrT3bnLgVK9bgR_1iLMPdAcXLxr_1d-pw/viewform?c=0&w=1) 以便在相关功能以及准备好可以测试挖矿时得到通知。
@@ -75,3 +79,4 @@
 ----
 
 不得不说，截至目前，Filecoin是一个靠谱的团队！赞👍
+
