--- a/zh/pages/区块链.md
+++ b/zh/pages/区块链.md
@@ -3,6 +3,7 @@
 
 ## 2019
 ### 1月
+[20190220【区块链】安装Filecoin（八十九）](pages/writing/20190220【区块链】安装Filecoin（八十九）.md)
 [20190215【区块链】Filecoin如期开源（八十五）](writing/20190215【区块链】Filecoin如期开源（八十五）.md)
 [20190116【区块链】使用MDWiki需要自动化的一些工作（五十六)](writing/20190116【区块链】使用MDWiki需要自动化的一些工作（五十六）.md)
 [20190111【区块链】在GitHub上部署MDWiki（五十一）](writing/20190111【区块链】在GitHub上部署MDWiki（五十一）.md)
