--- a/zh/pages/生命⋅修行.md
+++ b/zh/pages/生命⋅修行.md
@@ -3,6 +3,7 @@
 
 ## 2019
 ### 2月
+[20190219【生命⋅修行】我们拥有自己都看不到也无法相信的潜力（八十八）](writing/20190219【生命⋅修行】我们拥有自己都看不到也无法相信的潜力（八十八）.md)
 [20190213【生命⋅修行】刻在潜意识的习性反应（八十三）](writing/20190213【生命⋅修行】刻在潜意识的习性反应（八十三）.md)
 [20190211【生命⋅修行】学习面对冲突与阴暗面（八十一）](writing/20190211【生命⋅修行】学习面对冲突与阴暗面（八十一）.md)
 [20190208【生命⋅修行】以平常心面对事情的好坏成败（七十八）](writing/20190208【生命⋅修行】以平常心面对事情的好坏成败（七十八）.md)
