--- a/zh/pages/随笔.md
+++ b/zh/pages/随笔.md
@@ -3,6 +3,8 @@
 
 ## 2019
 ### 2月
+[20190218【随笔】为什么我们喜欢爽脆的食物（八十七）](writing/20190218【随笔】为什么我们喜欢爽脆的食物（八十七）.md)
+[20190217【随笔】人生无常（八十六）](writing/20190217【随笔】人生无常（八十六）.md)
 [20190214【随笔】没钱随意买礼物的情人节（八十四）](writing/20190214【随笔】没钱随意买礼物的情人节（八十四）.md)
 [20190212【随笔】了了分明与浑浑噩噩（八十二）](writing/20190212【随笔】了了分明与浑浑噩噩（八十二）.md)
 [20190210【随笔】不知走到生命尽头时是怎样（八十）](writing/20190210【随笔】不知走到生命尽头时是怎样（八十）.md)
