--- a/zh/pages/writing/20190526【随笔】雨宅（一百七十八）.md
+++ b/zh/pages/writing/20190526【随笔】雨宅（一百七十八）.md
@@ -1,3 +1,5 @@
+#【随笔】雨宅（一百七十八）
+
 早上本想出门继续暴走，包都背好了，却发现外面开始下雨️️……查了一下天气预报，发现是黄色暴雨警告。索性放弃，往床上一躺，不久就浑浑噩噩地睡过去！
 
 今天想必就要这样宅过去了吧……做什么事都提不起劲，嗜睡。看了一个搞笑视频，忍不住笑出了声，但转瞬这轻松心情就如撒气般消失了……
