--- a/zh/pages/区块链.md
+++ b/zh/pages/区块链.md
@@ -2,6 +2,12 @@
 
 
 ## 2019
+### 7月
+
+### 6月
+[20190618【区块链】Libra：Facebook的野望（二百零一）](writing/20190618【区块链】Libra：Facebook的野望（二百零一）.md)
+[20190608【区块链】国王、僧侣、商人和士兵（一百九十一）](writing/20190608【区块链】国王、僧侣、商人和士兵（一百九十一）.md)
+
 ### 5月
 [20190517【区块链】安装试用Jupyter Lab（一百六十九）](writing/20190517【区块链】安装试用Jupyter Lab（一百六十九）.md)
 [20190510【区块链】Filecoin矿工大会（一百六十二）](writing/20190510【区块链】Filecoin矿工大会（一百六十二）.md)
