--- a/zh/pages/生命⋅修行.md
+++ b/zh/pages/生命⋅修行.md
@@ -2,7 +2,22 @@
 
 
 ## 2019
+### 7月
+
 ### 6月
+[20190630【生命⋅修行】好吃的李子与二意三心（二百一十三）](writing/20190630【生命⋅修行】好吃的李子与二意三心（二百一十三）.md)
+[20190629【生命⋅修行】生活艰难吗？（二百一十二）](writing/20190629【生命⋅修行】生活艰难吗？（二百一十二）.md)
+[20190627【生命⋅修行】七情伤人（二百一十）](writing/20190627【生命⋅修行】七情伤人（二百一十）.md)
+[20190621【生命⋅修行】支离其德（二百零四）](writing/20190621【生命⋅修行】支离其德（二百零四）.md)
+[20190620【生命⋅修行】恐惧分离与死亡（二百零三）](writing/20190620【生命⋅修行】恐惧分离与死亡（二百零三）.md)
+[20190619【生命⋅修行】放下与当下（二百零二）](writing/20190619【生命⋅修行】放下与当下（二百零二）.md)
+[20190617【生命⋅修行】黑暗力量（二百）](writing/20190617【生命⋅修行】黑暗力量（二百）.md)
+[20190616【生命⋅修行】屯之損：怠惰之咎（一百九十九）](writing/20190616【生命⋅修行】屯之損：怠惰之咎（一百九十九）.md)
+[20190614【生命⋅修行】人生的意义（一百九十七）](writing/20190614【生命⋅修行】人生的意义（一百九十七）.md)
+[20190613【生命⋅修行】非暴力沟通（一百九十六）](writing/20190613【生命⋅修行】非暴力沟通（一百九十六）.md)
+[20190612【生命⋅修行】真正的聆听（一百九十五）](writing/20190612【生命⋅修行】真正的聆听（一百九十五）.md)
+[20190609【生命⋅修行】可曾真正地面对孤独（一百九十二）](writing/20190609【生命⋅修行】可曾真正地面对孤独（一百九十二）.md)
+[20190605【生命⋅修行】躯体化（一百八十八）](writing/20190605【生命⋅修行】躯体化（一百八十八）.md)
 [20190603【生命⋅修行】都是“负面情绪”的日记也没有关系（一百八十六）](writing/20190603【生命⋅修行】都是“负面情绪”的日记也没有关系（一百八十六）.md)
 
 ### 5月
