--- a/zh/pages/随笔.md
+++ b/zh/pages/随笔.md
@@ -2,7 +2,22 @@
 
 
 ## 2019
+### 7月
+[20190701【随笔】炎夏已至（二百一十四）](writing/20190701【随笔】炎夏已至（二百一十四）.md)
+
 ### 6月
+[20190628【随笔】幸存的小鸡（二百一十一）](writing/20190628【随笔】幸存的小鸡（二百一十一）.md)
+[20190626【随笔】一只萤火虫（二百零九）](writing/20190626【随笔】一只萤火虫（二百零九）.md)
+[20190625【随笔】长木耳的枣树（二百零八）](writing/20190625【随笔】长木耳的枣树（二百零八）.md)
+[20190624【随笔】山中不知岁月（二百零七）](writing/20190624【随笔】山中不知岁月（二百零七）.md)
+[20190623【随笔】书虫(二百零六)](writing/20190623【随笔】书虫(二百零六).md)
+[20190622【随笔】贪的后果（二百零五）](writing/20190622【随笔】贪的后果（二百零五）.md)
+[20190615【随笔】外祖母和耶稣（一百九十八）](writing/20190615【随笔】外祖母和耶稣（一百九十八）.md)
+[20190611【随笔】黑云压城（一百九十四）](writing/20190611【随笔】黑云压城（一百九十四）.md)
+[20190610【随笔】兀自绽放的兰花（一百九十三）](writing/20190610【随笔】兀自绽放的兰花（一百九十三）.md)
+[20190607【随笔】流浪地球（一百九十）](writing/20190607【随笔】流浪地球（一百九十）.md)
+[20190606【随笔】发愤忘食（一百八十九）](writing/20190606【随笔】发愤忘食（一百八十九）.md)
+[20190604【随笔】关于英语连读的感悟（一百八十七）](writing/20190604【随笔】关于英语连读的感悟（一百八十七）.md)
 [20190602【随笔】大雨，出门吗？（一百八十五）](writing/20190602【随笔】大雨，出门吗？（一百八十五）.md)
 [20190601【随笔】有朋友真好（一百八十四）](writing/20190601【随笔】有朋友真好（一百八十四）.md)
 
@@ -11,7 +26,7 @@
 [20190528【随笔】清凉夏雨🌧️（一百八十）](writing/20190528【随笔】清凉夏雨（一百八十）.md)
 [20190526【随笔】雨🌧️宅（一百七十八）](writing/20190526【随笔】雨宅（一百七十八）.md)
 [20190525【随笔】周末的深圳湾公园（一百七十七）](writing/20190525【随笔】周末的深圳湾公园（一百七十七）.md)
-[20190524【随笔】☕️与🍵（一百七十六）](writing/20190524【随笔】☕️与🍵（一百七十六）.md)
+[20190524【随笔】☕️与🍵（一百七十六）](writing/20190524【随笔】咖啡与茶（一百七十六）.md)
 [20190522【随笔】明天和意外哪一个会先来（一百七十四）](writing/20190522【随笔】明天和意外哪一个会先来（一百七十四）.md)
 [20190520【随笔】艾森克人格分析（一百七十二）](writing/20190520【随笔】艾森克人格分析（一百七十二）.md)
 [20190519【随笔】一路向南一路烟（一百七十一）](writing/20190519【随笔】一路向南一路烟（一百七十一）.md)
