--- a/zh/pages/随笔.md
+++ b/zh/pages/随笔.md
@@ -2,6 +2,16 @@
 
 ## 2020
 ### 2月
+[20200217【随笔】又见云海（四二一）](pages/writing/20200217【随笔】又见云海（四二一）.md)
+[20200216【随笔】锯木头（四二〇）](pages/writing/20200216【随笔】锯木头（四二〇）.md)
+[20200215【随笔】忽然降温（四一九）](pages/writing/20200215【随笔】忽然降温（四一九）.md)
+[20200214【随笔】可恶的野猫（四一八）](pages/writing/20200214【随笔】可恶的野猫（四一八）.md)
+[20200213【随笔】如临大敌（四一七）](pages/writing/20200213【随笔】如临大敌（四一七）.md)
+[20200212【随笔】事出反常必有「妖」——阿宝趣事（四一六）](pages/writing/20200212【随笔】事出反常必有「妖」——阿宝趣事（四一六）.md)
+[20200211【随笔】清晨的薄雾（四一五）](pages/writing/20200211【随笔】清晨的薄雾（四一五）.md)
+[20200210【随笔】真正的LOG（四一四）](pages/writing/20200210【随笔】真正的LOG（四一四）.md)
+[20200209【随笔】茅厕门口的绿意（四一三）](pages/writing/20200209【随笔】茅厕门口的绿意（四一三）.md)
+[20200208【随笔】香喷喷的烤橘子（四一二）](pages/writing/20200208【随笔】香喷喷的烤橘子（四一二）.md)
 [20200205【随笔】就要十五了（四〇九）](writing/20200205【随笔】就要十五了（四〇九）.md)
 [20200204【随笔】就要立春了（四〇八）](writing/20200204【随笔】就要立春了（四〇八）.md)
 [20200201【随笔】土家族的「打扮」（四〇五）](writing/20200201【随笔】土家族的「打扮」（四〇五）.md)
